--- a/tcsl.css
+++ b/tcsl.css
@@ -700,8 +700,7 @@ div.unread-mentions-indicator-bottom {
 [class~=app] {
     background: var(--background-image) !important;
     background-size: cover !important;
-    animation: var(--custom_background) 5s cubic-bezier(1,0,0,1) infinite;
-    transition: background .5s;
+    animation: var(--custom_background) var(--time_background, 5s) infinite;
 }
 
 .appMount-3lHmkl {
@@ -719,8 +718,7 @@ div.unread-mentions-indicator-bottom {
     width: 100vw;
     background: var(--background-image) !important;
     background-size: cover !important;
-    animation: var(--custom_background) var(--time_background, 5s) cubic-bezier(1,0,0,1) infinite;
-    transition: background .5s;
+    animation: var(--custom_background) var(--time_background, 5s) infinite;
 }
 
 .typeWindows-1za-n7 {
@@ -758,11 +756,18 @@ div.unread-mentions-indicator-bottom {
 }
 
 @keyframes background {
+  25% { --background-image: var(--first-background, #f99); }
+  50% { --background-image: var(--second-background, #9f9); }  
+  75% { --background-image: var(--third-background, #99f); }
+  100% { --background-image: var(--first-background, #f99); }
+}
+
+/*@keyframes background {
   0% { --background-image: var(--first-background, #f99); }
   33% { --background-image: var(--second-background, #9f9); }  
   67% { --background-image: var(--third-background, #99f); }
   100% { --background-image: var(--first-background, #f99); }
-}
+}*/
 
 .theme-dark .container-1ETFDs .homeButton-2Cw51C {
     background: transparent;
